k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: mongo
        image: mongo:6.0
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      volumes:
      - name: mongo-data
        emptyDir: {}  # for demo; use persistent volume in prod
