k8s/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dev
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
