k8s/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: dev
spec:
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
